# SecurityCentre-System

./: .gitignore  README.md
Docs/html/: _access_result_8h_source.html  _agent_device_8h_source.html  _agent_mgmnt_panel_8h_source.html  _detector_device_8h_source.html  _detector_mgmnt_panel_8h_source.html  _device_storage_8h_source.html  _electronic_device_8h_source.html  _facial_recognition_agent_8h_source.html  _fingerprint_agent_8h_source.html  _i_valid_data_8h_source.html  _main_window_8h_source.html  _r_f_i_d_agent_8h_source.html  _simulator_8h_source.html  _valid_2_i_valid_data_8h_source.html  _valid_data_8h_source.html  _valid_data_wrapper_8h_source.html  annotated.html  annotated_dup.js  class_agent_device-members.html  class_agent_device.html  class_agent_device.js  class_agent_mgmnt_panel-members.html  class_agent_mgmnt_panel.html  class_agent_mgmnt_panel.js  class_detector_device-members.html  class_detector_device.html  class_detector_device.js  class_detector_mgmnt_panel-members.html  class_detector_mgmnt_panel.html  class_detector_mgmnt_panel.js  class_device_storage-members.html  class_device_storage.html  class_device_storage.js  class_electronic_device-members.html  class_electronic_device.html  class_electronic_device.js  class_facial_recognition_agent-members.html  class_facial_recognition_agent.html  class_facial_recognition_agent.js  class_fingerprint_agent-members.html  (+152 more)
Docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  enums_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  searchdata.js
Docs/latex/: _access_result_8h_source.tex  _agent_device_8h_source.tex  _agent_mgmnt_panel_8h_source.tex  _detector_device_8h_source.tex  _detector_mgmnt_panel_8h_source.tex  _device_storage_8h_source.tex  _electronic_device_8h_source.tex  _facial_recognition_agent_8h_source.tex  _fingerprint_agent_8h_source.tex  _i_valid_data_8h_source.tex  _main_window_8h_source.tex  _r_f_i_d_agent_8h_source.tex  _simulator_8h_source.tex  _valid_2_i_valid_data_8h_source.tex  _valid_data_8h_source.tex  _valid_data_wrapper_8h_source.tex  annotated.tex  class_agent_device.tex  class_agent_mgmnt_panel.tex  class_detector_device.tex  class_detector_mgmnt_panel.tex  class_device_storage.tex  class_electronic_device.tex  class_facial_recognition_agent.tex  class_fingerprint_agent.tex  class_i_valid_data.tex  class_main_window.tex  class_r_f_i_d_agent.tex  class_simulator.tex  class_ui_1_1_agent_panel.tex  class_ui_1_1_detector_mgmnt_panel.tex  class_ui_1_1_main_window.tex  class_ui_1_1_mgmnt_panel.tex  class_ui_1_1_simulator.tex  class_ui_1_1detector__mgmnt__panel.tex  class_ui___agent_panel.tex  class_ui___detector_mgmnt_panel.tex  class_ui___main_window.tex  class_ui___mgmnt_panel.tex  class_ui___simulator.tex  (+48 more)
SecurityCentre/: AgentMgmntPanel.cpp  AgentMgmntPanel.h  CMakeLists.txt  DetectorMgmntPanel.cpp  DetectorMgmntPanel.h  DetectorMgmntPanel.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Simulator.cpp  Simulator.h  Simulator.ui  agent_mgmnt_panel.cpp  agent_mgmnt_panel.h  detector_mgmnt_pane.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mgmnt_panel.cpp  mgmnt_panel.h  mgmnt_panel.ui  simulator.cpp  simulator.h  simulator.ui
SecurityCentre/Controller/: controller.cpp  controller.h
SecurityCentre/Model/: AgentDevice.cpp  AgentDevice.h  DetectorDevice.cpp  DetectorDevice.h  DeviceStorage.cpp  DeviceStorage.h  ElectronicDevice.cpp  ElectronicDevice.h  FacialRecognitionAgent.cpp  FacialRecognitionAgent.h  FingerprintAgent.cpp  FingerprintAgent.h  IValidData.h  RFIDAgent.cpp  RFIDAgent.h  ValidData.cpp  ValidData.h  ValidDataWrapper.h  agent.cpp  agent.h  agentdevice.cpp  agentdevice.h  agentsstorage.cpp  agentsstorage.h  authlog.cpp  authlog.h  detectordevice.cpp  detectordevice.h  devicestorage.cpp  devicestorage.h  eagentaccessresult.cpp  eagentaccessresult.h  eagentstatus.cpp  eagentstatus.h  electronicdevice.cpp  electronicdevice.h  facialrecognitionagent.cpp  facialrecognitionagent.h  fingerprintagent.cpp  fingerprintagent.h  (+3 more)
SecurityCentre/Model/Enum/: AccessResult.h  accessresult.h
SecurityCentre/Model/Valid/: IValidData.h  validfacial.cpp  validfacial.h  validfingerprint.cpp  validfingerprint.h  validrfid.cpp  validrfid.h
copied_files/: mainwindow_kopia.cpp  mainwindow_kopia.h  mainwindow_kopia.ui
